--- a/src/msu.SmartMeterHome.Client/public/index.html
+++ b/src/msu.SmartMeterHome.Client/public/index.html
@@ -15,7 +15,7 @@
 <body class="app-container">
 		<!-- [body] -->
 		<div id="elmish-app" class="elmish-app" />
-    <script src="./bundle.js"></script>
+    <script src="./bundle/bundle.js"></script>
 		<!-- [/body] -->
 
 		<!-- Listen on refresh events from the server -->
