Create a login page

--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -4,6 +4,7 @@
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">	
+		<link rel="stylesheet" href="css/site.css">
 
 		<!-- React -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.0/react.min.js"></script>
