--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -11,6 +11,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.0/react-dom.min.js"></script>	
 </head>
 <body class="app-container">
+    <script src="js/shim.min.js"></script>
 	<div id="elmish-app" class="elmish-app" />
 	<script src="./public/bundle.js"></script>
 </body>
