Fix minor html linting issues
- Add a title
- Fix the meta http-equiv item
- Use tabs consistently

--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -1,7 +1,8 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
-		<meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
+		<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
+		<title>Fable-Suave Scaffold sample</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">	
 		<link rel="stylesheet" href="css/site.css">
@@ -13,7 +14,7 @@
 <body class="app-container">
     <script src="js/shim.min.js"></script>
     <script src="js/fetch.js"></script>
-	<div id="elmish-app" class="elmish-app" />
-	<script src="./public/bundle.js"></script>
+    <div id="elmish-app" class="elmish-app" />
+    <script src="./public/bundle.js"></script>
 </body>
 </html>
