--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 		<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-		<title>Fable-Suave Scaffold sample</title>
+		<title>SAFE-Stack sample</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">	
 		<link rel="stylesheet" href="css/site.css">
