--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">	
 		<link rel="stylesheet" href="css/site.css">
+		<link rel="shortcut icon" type="image/png" href="/images/safe_favicon.png"/>
 
 		<!-- React -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.0/react.min.js"></script>
