setup solution for semantic-ui

--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -5,7 +5,8 @@
 		<title>SAFE-Stack sample</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="./public/semantic.css">
 		<link rel="shortcut icon" type="image/png" href="/images/safe_favicon.png"/>
 </head>
 <body class="app-container">
