Start works to support Fable 2. SSR target seems ok

--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -10,6 +10,7 @@
 </head>
 <body class="app-container">
     <div id="elmish-app" class="elmish-app" />
-    <script src="./public/bundle.js"></script>
+    <script src="./public/vendors.js"></script>
+    <script src="./public/main.js"></script>
 </body>
 </html>
