--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-		<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-		<title>SAFE-Stack sample</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/site.css">
-		<link rel="shortcut icon" type="image/png" href="/Images/safe_favicon.png"/>
+	<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
+	<title>SAFE-Stack Bookstore</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/site.css">
+	<link rel="shortcut icon" type="image/png" href="/Images/safe_favicon.png"/>
 </head>
 <body class="app-container">
     <div id="elmish-app" class="elmish-app" />
