--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>SAFE-Stack Bookstore</title>
