--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-    <title>SAFE Template</title>
+    <title>SAFE Bookstore</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/favicon.png"/>
