--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -15,7 +15,8 @@
     </script>
     <script type="module" src="/output/App.js"></script>
     <script type="module">
-        document.title = document.title.concat(` - v${window.APP_VERSION}`)
+        const appVersion = import.meta.env.VITE_APP_VERSION || "dev"
+        document.title = document.title.concat(` - v${appVersion}`)
     </script>
 
 </body>
